--- a/school/elec_302/lab_02/tex/lab_report_2.tex
+++ b/school/elec_302/lab_02/tex/lab_report_2.tex
@@ -53,54 +53,33 @@ workstation was also obtained.
 
 \section{Circuits Tested}
 \begin{figure}[h]
-  \begin{center}
-    \includegraphics[width=.8\textwidth]{circuit_01}
-    \caption{Single Phase Transformer Circuit for part }
-    \label{fig:circuit_01}
-  \end{center}
+  \centering
+  \includegraphics[width=.8\textwidth]{circuit_01}
+  \caption{Single Phase Transformer Circuit for Part One}
+  \label{fig:circuit_01}
 \end{figure}
 
 \begin{figure}[h]
-  \begin{center}
-    \includegraphics[width=.8\textwidth]{circuit_02}
-    \caption{}
-    \caption{Single Phase Transformer Circuit for part two}
-    \label{fig:circuit_02}
-  \end{center}
+  \centering
+  \includegraphics[width=.8\textwidth]{circuit_02}
+  \caption{Single Phase Transformer Circuit for Part Two}
+  \label{fig:circuit_02}
 \end{figure}
 
 \begin{figure}[h]
-  \begin{center}
-    \includegraphics[width=.8\textwidth]{circuit_03}
-    \caption{Single Phase Transformer Circuit for part three}
-    \label{fig:circuit_03}
-  \end{center}
+  \centering
+  \includegraphics[width=.8\textwidth]{circuit_03}
+  \caption{Single Phase Transformer Circuit for Part Three}
+  \label{fig:circuit_03}
 \end{figure}
-
-\begin{table}[h]
-  \begin{center}
-    \begin{tabular}{ccc}
-      \hline
-      R & L & C \\
-      $\Omega$ & H & $\mu$F \\
-      \hline
-      1200 & 0.8 & --- \\ 1200 & 0.8 & 2.2 \\ 1200 & 0.8 & 4.4 \\
-      1200 & 0.8 & 8.8 \\ 1200 & 1.6 & --- \\ 1200 & 1.6 & 2.2 \\
-      1200 & 1.6 & 4.4 \\ 1200 & 1.6 & 8.8 \\
-      \hline
-    \end{tabular}
-    \caption{RLC Values for circuit in Figure~\ref{circuit_01}}
-    \label{tab:testc_dat}
-  \end{center}
-\end{table}
 
 \section{Procedure}
 At the EMS workstation, the main power switch of the Power Supply was verified
 to be OFF, and the voltage control knob was verified to be completely
 counterclockwise. The voltmeter selector switch was set to position 4-N. The
-RLC circuit shown in Figure~\ref{fig:circuit_xx} was modeled with the capacitor
+RLC circuit shown in Figure~\ref{fig:XXX} was modeled with the capacitor
 left out at first. The elements labeled E$_1$ and I$_1$ on
-Figure~\ref{fig:circuit_xx} referred to the ammeter and voltmeter Data Acquisition
+Figure~\ref{fig:XXX} referred to the ammeter and voltmeter Data Acquisition
 Interface (DAI) connections. The DAI 24-V supply was connected to the main
 Power Supply, and the DAI USB cable was connected to the PC workstation. The
 main power switch of the Power Supply was switched to ON.
@@ -119,80 +98,63 @@ E$_1$ was selected as the reference phasor. The voltage control knob was then
 turn completely counterclockwise and the main power switch was set to OFF.
 
 The EMS workstation was then reconfigured to include the capacitance.  The
-subsequent values included in Table~\ref{tab:meas_data} were then measured.
-
-\section{Calc}
-\begin{table}[h]
-  \begin{center}
-    \begin{tabular}{cccccccccc}
-      \hline
-      R & L & C & I$_1$ & E$_1$ & P & $\theta$ & S & Q & p.f. \\
-      $\Omega$ & H & $\mu$F & A & V & W & $\circ$ & VA & VAR & \\
-      \hline
-      1200 & 0.8 & --- & 0.210 & 60 & 4.56 &  68.77 & 12.58 & 11.73 & 0.36 \\
-      1200 & 0.8 & 2.2 & 0.164 & 60 & 4.56 &  62.48 &  9.86 &  8.75 & 0.46 \\
-      1200 & 0.8 & 4.4 & 0.122 & 60 & 4.56 &  51.65 &  7.34 &  5.76 & 0.62 \\
-      1200 & 0.8 & 8.8 & 0.076 & 60 & 4.56 &  -2.67 &  4.56 & -0.21 & 1.00 \\
-      1200 & 1.6 & --- & 0.114 & 60 & 3.39 &  60.27 &  6.84 &  5.94 & 0.50 \\
-      1200 & 1.6 & 2.2 & 0.075 & 60 & 3.39 &  41.06 &  4.50 &  2.96 & 0.75 \\
-      1200 & 1.6 & 4.4 & 0.057 & 60 & 3.39 &  -0.50 &  3.39 & -0.03 & 1.00 \\
-      1200 & 1.6 & 8.8 & 0.115 & 60 & 3.39 & -60.51 &  6.89 & -6.00 & 0.49 \\
-      \hline
-    \end{tabular}
-    \caption{Calculated Data}
-    \label{tab:calc_data}
-  \end{center}
-\end{table}
-
-\[\mathbf{P} = \mathbf{VI}\cos\theta \]
-\[\mathbf{Q} = \mathbf{VI}\sin\theta\]
-\[\mathbf{S} = \mathbf{VI}^*\]
-\[\mathbf{V} = \mathbf{IZ}\]
-\[\text{p.f.} = \cos\theta\]
+subsequent values included in Table~\ref{tab:XXX} were then measured.
 
 \section{Results}
 \begin{table}[h]
-  \begin{center}
-    \begin{tabular}{cccccccccc}
-      \hline
-      R & L & C & I$_1$ & E$_1$ & P & $\theta$ & S & Q & p.f. \\
-      $\Omega$ & H & $\mu$F & A & V & W & $\circ$ & VA & VAR & \\
-      \hline
-      1200 & 0.8 & --- & 0.206 & 60.9 & 4.53 &  68.0 & 12.55 & 11.21 & 0.37 \\
-      1200 & 0.8 & 2.2 & 0.158 & 60.9 & 4.56 &  60.9 &  9.62 &  8.19 & 0.49 \\
-      1200 & 0.8 & 4.4 & 0.117 & 60.9 & 4.59 &  49.0 &  7.13 &  5.28 & 0.66 \\
-      1200 & 0.8 & 8.8 & 0.081 & 61.0 & 4.65 &  -4.4 &  4.94 & -0.36 & 1.00 \\
-      1200 & 1.6 & --- & 0.116 & 61.0 & 3.94 &  55.4 &  7.08 &  0.37 & 1.00 \\
-      1200 & 1.6 & 2.2 & 0.079 & 61.0 & 3.96 &  32.8 &  4.82 &  2.55 & 0.84 \\
-      1200 & 1.6 & 4.4 & 0.067 & 61.0 & 3.99 &  -6.6 &  4.09 & -0.46 & 1.00 \\
-      1200 & 1.6 & 8.8 & 0.124 & 61.2 & 4.05 & -57.4 &  7.60 & -6.33 & 0.54 \\
-      \hline
-    \end{tabular}
-    \caption{Experimental Data}
-    \label{tab:meas_data}
-  \end{center}
+  \centering
+  \begin{tabular}{cc}
+    \hline
+    Winding & Resistance \\
+    \# & $\Omega$ \\
+    \hline
+    1--2 & -- \\
+    3--4 & -- \\
+    5--6 & -- \\
+    7--8 & -- \\
+    8--4 & -- \\
+    5--9 & -- \\
+    9--6 & -- \\
+  \end{tabular}
+  \caption{Winding Resistances}
+  \label{tab:wind_res}
 \end{table}
 
-\section{Comparison with Theoretical: Percent Deviation}
 \begin{table}[h]
-  \begin{center}
-    \begin{tabular}{cccccccccc}
-      \hline
-      R & L & C & I$_1$ & E$_1$ & P & $\theta$ & S & Q & p.f. \\
-      \hline
-      0.0 & 0.0 & --- & 1.9 & 1.5 & 0.7 & 1.1  & 0.2 & 4.4  & 2.8 \\
-      0.0 & 0.0 & 0.0 & 3.7 & 1.5 & 0.0 & 2.5  & 2.4 & 6.4  & 6.5 \\
-      0.0 & 0.0 & 0.0 & 4.1 & 1.5 & 0.7 & 5.1  & 2.9 & 8.3  & 6.5 \\
-      0.0 & 0.0 & 0.0 & 6.6 & 1.7 & 2.0 & 65   & 8.3 & 71   & 0.0 \\
-      0.0 & 0.0 & --- & 1.8 & 1.7 & 16  & 8.1  & 3.5 & 94   & 100 \\
-      0.0 & 0.0 & 0.0 & 5.3 & 1.7 & 17  & 20   & 7.1 & 14   & 12  \\
-      0.0 & 0.0 & 0.0 & 18  & 1.7 & 18  & 1220 & 21  & 1433 & 0.0 \\
-      0.0 & 0.0 & 0.0 & 7.8 & 2.0 & 19  & 5.1  & 10  & 5.5  & 10  \\
-    \end{tabular}
-  \end{center}
+  \centering
+  \begin{tabular}{cccc}
+    \hline
+    Winding & Primary Voltage & Secondary Voltage & Turn Ratio \\
+    \# & E$_1$ V (1--2) & E$_2$ V & N$_\text{P}$:N$_\text{S}$\\
+    \hline
+    3--4 & -- & -- & -- \\
+    5--6 & -- & -- & -- \\
+    7--8 & -- & -- & -- \\
+    8--4 & -- & -- & -- \\
+    5--9 & -- & -- & -- \\
+    9--6 & -- & -- & -- \\
+  \end{tabular}
+  \caption{Primary and Secondary Voltages}
+  \label{tab:volt_rat}
 \end{table}
 
-\[\text{\%deviation} = \frac{measured - theoretical}{theoretical}\ \times \text{100\%}\]
+\begin{table}[h]
+  \centering
+  \begin{tabular}{ccc}
+    \hline
+    Primary Voltage & Secondary Voltage & Exciting Voltage\\
+    E$_1$ V (1--2) & E$_2$ V & E$_2$ V\\
+    \hline
+    --  & -- & -- \\
+    --  & -- & -- \\
+    --  & -- & -- \\
+    --  & -- & -- \\
+    --  & -- & -- \\
+    --  & -- & -- \\
+  \end{tabular}
+  \caption{Data for Fig~\ref{fig:circuit_03}}
+  \label{tab:circuit_3}
+\end{table}
 
 \section{Conclusions}
 The effects of different levels of capacitance were observed by conducting this
@@ -206,7 +168,7 @@ Also, one can see that the voltage measured at E$_1$ fluctuating throughout the
 experiment. This fluctuation caused added variations between measured and
 theoretical.
 
-It was noted that row 8 of Tables~\ref{calc_data} and~\ref{meas_data} contained
+It was noted that row 8 of Tables~\ref{tab:XXX} and~\ref{tab:XXX} contained
 a negative angle for the phase impedance. This signified a highly capacitative
 load where the phase current lead the phase voltage. All other loads were
 inductive, except in rows 4 and 7, where the load was slightly capacitative. In
