--- a/school/elec_302/lab_02/tex/lab_report_2.tex
+++ b/school/elec_302/lab_02/tex/lab_report_2.tex
@@ -45,12 +45,10 @@
 %\setlength\parindent{0pt} % Removes all indentation from paragraphs
 
 \section{Purpose of Experiment}
-CHANGE ME!! In this experiment, an RLC circuit was modeled on an EMS
-workstation.  The capacitance was varied for two different inductance values.
-The circuit was then analyzed to obtain measured values for the circuit power
-factor, real power, and apparent power. These measured results were then
-compared to the theoretical values calculated beforehand. Familiarization with
-the EMS workstation was also obtained.
+In this experiment, the basic characteristics of transformers were studied. Various transformer circuits 
+with different unknown turns ratios were constructed in order to study the different voltage ratios at each particular 
+turns ratio. Other transformer circuits were constructed to observe the similarity between the current ratio 
+and turns ratio, and to observe the saturation curve of a magnetic circuit.
 
 \section{Circuits Tested}
 \subsection{Voltage Ratios}
@@ -78,39 +76,42 @@ the EMS workstation was also obtained.
 \end{figure}
 
 \section{Procedure}
+\subsection{EMS Workstation Set-up}
+At the Lab-Volt EMS workstation, a Fluke multi-meter was used to measure the DC resistance of each transformer
+winding. These values are recorded in Table 1. The DAI 24-V supply was turned on, and the DAI USB connector was 
+connected between the EMSworkstation and the PC. On the LVDAM EMS application software, the metering windows 
+for E1, E2, E3, I1, and I2 were opened. The metering windows were set to continuous refresh. 
+
 \subsection{Voltage Ratios}
 \label{part1}
-CHANGE ME!! At the EMS workstation, the main power switch of the Power Supply
-was verified to be OFF, and the voltage control knob was verified to be
-completely counterclockwise. The voltmeter selector switch was set to position
-4-N. The RLC circuit shown in Figure~\ref{fig:XXX} was modeled with the
-capacitor left out at first. The elements labeled E$_1$ and I$_1$ on
-Figure~\ref{fig:XXX} referred to the ammeter and voltmeter Data Acquisition
-Interface (DAI) connections. The DAI 24-V supply was connected to the main
-Power Supply, and the DAI USB cable was connected to the PC workstation. The
-main power switch of the Power Supply was switched to ON.
+With the main power swtich to OFF and the voltage control knob fully counterclockwise (CCW), the voltmeter selector 
+switch was set to postion 4-N. The circuit shown in Figure 1 was then constructed. The main power switch was
+turned to ON and the voltage supply voltage was set to 120-V. The primary voltage was recorded from E1 and the 
+secondary voltage was recorded from E2. The values for E1 and E2 were then measured and recorded for each winding
+number listed in Table 2. The main power switch was set to OFF and the voltage control knob was set fully CCW
+before rewiring the circuit for each winding number. The respective turns ratio for each set of winding 
+number, primary, and secondary voltages was calculted and also listed in Table 2. After completing the requisite
+measurements, the main power switch was set OFF and the voltage control to fully CCW.
 
 \subsection{Current Ratio}
 \label{part2}
-CHANGE ME!! On the PC, the Lab-Volt Data Acquisition Management application was
-started, and the file pertaining to the experiment being worked was opened.
-Three windows (metering, oscilloscope, and phasor analyzer) were verified to
-open up along with the experiment file. The three windows were set to
-continuously refresh.
+The circuit shown in Figure 2 was then constructed. The main power switch was set ON and the voltage control knob
+was slowly adjusted to read 0.4-A from I2. It was noted that the ammeter I2 shorted the windings 5-6. Hence,
+extreme care was given to not exceed the secondary winding current rating of 0.5-A. The values for primary voltage
+E1, primary current I1, and secondary current I2 were then measured and recorded, as shown in Table 3. The main 
+power switch was set OFF and the voltage control knob fully CCW.
 
 \subsection{Saturation}
 \label{part3}
-CHANGE ME!! The supply voltage was adjusted to read 24-V. Verification was
-obtained by monitoring the EMS analog voltmeter and the digital metering window
-on the {PC}.  The load voltage E$_1$, load current I$_1$, the real power
-consumed by the circuit, and the phase angle were recorded. In the Phasor
-Analyzer window, E$_1$ was selected as the reference phasor. The voltage
-control knob was then turn completely counterclockwise and the main power
-switch was set to OFF.
-
-CHANGE ME!! The EMS workstation was then reconfigured to include the
-capacitance.  The subsequent values included in Table~\ref{tab:XXX} were then
-measured.
+The circuit shown in Figure 3 was then constucted. The voltage supply connection was set from 4-N to 4-5. Since 
+the exciting current was small the 300 ohm resistor was included and thus the voltage E3 across the resistor was 
+used to show the current variation. On the PC, the Data Table application was opened and set to record settings 
+from the Options tab. E1, E2, and E3 appeared as the columns in the data table. The main power switch was set ON 
+and the supply voltage was then increased in 10-V increments from 0-180 volts. At each increment, the Record Data 
+tab was clicked to instantly enter the voltage measurements in the data table. After reaching 180-V, the main power
+switch was set to OFF and the voltage supply control knob was fully CCW. On the PC, the Graph application was opened. 
+E3 (the excitiing current) was set as the x-axis, and E1 (the applied voltage) as the y-axis. The Line Graph tab was
+clicked to display the saturation curve of the transformer core.
 
 \section{Results}
 \subsection{Voltage Ratios}
@@ -125,8 +126,9 @@ measured.
     3--4 & 24.9 \\
     5--6 &  7.9 \\
     7--8 &  9.4 \\
-    8--4 & 12.1 \\
-    5--9 &  3.6 \\
+    3--7 & 12. 1\\
+    8--4 &  3.6 \\
+    5--9 &  3.8 \\
     9--6 &  4.2 \\
   \end{tabular}
   \caption{Winding Resistances}
@@ -141,8 +143,8 @@ measured.
     \# & E$_1$ V (1--2) & E$_2$ V & N$_\text{P}$:N$_\text{S}$\\
     \hline
     3--4 & 120.3 & 207.2 & 0.58 \\
-    5--6 & 119.9 & 119.4 & 1.00 \\
-    7--8 & 120.4 &  75.8 & 1.59 \\
+    5--6 & 120.2 & 119.2 & 1.01 \\
+    7--8 & 120.2 &  75.8 & 1.59 \\
     3--7 & 120.3 & 103.6 & 1.16 \\
     8--4 & 120.3 &  27.8 & 4.33 \\
     5--9 & 120.2 &  59.8 & 2.01 \\
@@ -205,15 +207,28 @@ measured.
 \end{figure}
 
 \section{Conclusions}
-CHANGE ME!!  The effects of different levels of capacitance were observed by
-conducting this experiment. The theoretical values for real power, apparent
-power, and the phase angle were calculated. Then, the experiment was conducted
-to verify the effects of a parallel RLC circuit. These measured results were
-differed from the theoretical results because of one underlying reason. The
-switch modeling the inductance at the EMS workstation contained an internal
-impedance.  This added impedance caused the calculated results to differ from
-the measured.  Also, one can see that the voltage measured at E$_1$ fluctuating
-throughout the experiment. This fluctuation caused added variations between
-measured and theoretical.
+By measuring the resistance of each transformer winding and not getting any extremely high resistance 
+readings similar to an open circuit, it was determined that the transformer windings had no faults and 
+the integrity of the windings were intact.
+
+By measuring the voltage ratios for each particular transformer winding, the turns ratio for that winding
+was calculated by taking the primary voltage over the secondary voltage. This was one method to determine
+the turns ratio of an unspecified transformer. 
+
+By measuring the current ratio for one set of transformer windings, another method to determine the turns ratio
+was implemented. By referring to the text \emph{Electric Machinery Fundamentals}, the current ratio of a 
+transformer is inversely proportional to the turns ratio. The relationship states: \frac{Ip}{Is} = \frac{Ns}{Np}, 
+where Ip is the primary current, Is the secondary current, Np the primary winding, and Ns the secondary winding. 
+The ratio of secondary current I2 over primary current I1 was the same as the turns ratio calculated and recorded 
+in row 2 of Table 2 pertaining to winding number 5-6. Therefore, the additional method of determing a transformer 
+turns ratio was verified.
+
+By analyzing the saturation curve, it was determined that the transformer core did indeed become saturated.
+From an applied voltage of 10-V to approximately 110-V, the saturation curve was linear and the tranformer
+core was unsaturated at this time. A small increase in the magnetomotive force (represented as E3) resulted in 
+a very large increase in the flux produced (represented as E1). Then the saturation curve started to level off 
+after an applied voltage of 110-V (termed the \emph{knee} of the curve), and therefore the core started to 
+become saturated. In the saturated region, increases in magnetomotive force produce smaller and smaller increases 
+in flux.
 
 \end{document}
