--- a/school/elec_313/lab4/tex/report.tex
+++ b/school/elec_313/lab4/tex/report.tex
@@ -92,9 +92,9 @@ First the function generator was set to a square wave with a frequency of 20 kHz
 \section{Conclusion}
 \label{sec:conclusion}
 
-The motor driver board can be adjusted to control the speed and direction of the DC motor.  First, the $Enable$ input must ``see'' ~\SI{5}{V} before the Motor Drive Board can then allow the $L_1$ and $L_2$ inputs control the phase/rotation of the output.  To control the output voltage, the $L_1$ and $L_2$ inputs must also see ~\SI{5}{V} separately.  In our configuration, $L_1$ caused the motor to rotate counter-clockwise.  Similarly, $L_2$ caused clockwise rotation, so enabling both causes the motor to stop.
+The motor driver board can be adjusted to control the speed and direction of the DC motor.  First, the $Enable$ input must ``see'' ~\SI{5}{V} before the Motor Drive Board can then allow the $L_1$ and $L_2$ inputs control the phase/rotation of the output.  To control the output rotation, the $L_1$ and $L_2$ inputs must also see ~\SI{5}{V} separately.  In our configuration, $L_1$ caused the motor to rotate counter-clockwise.  Similarly, $L_2$ caused clockwise rotation, so enabling both causes the motor to stop.
 
-The motor driver board speed was adjusted via two different approaches in the experiment.  In part I, the input voltage was adjusted to proportionately affect the output voltage, thus varying the speed of the motor.  As input voltage was swept from high to low in part I, the motor speed slowed and eventually no noticeable turning could be observed at \SI{3}{V}.  In part II, the \%Duty of the \SI{5}{V} to the $Enable$ input was adjusted such that the time that \SI{5}{V} was seen at the $Enable$ input was varied from 50\% of the time to 80\% of the time which resulted in lower to higher Vrms accordingly.  This proportional change in \%Duty and output Vrms was observed and recorded Table~\ref{tab:duty}.
+The motor driver board speed was adjusted via two different approaches in the experiment.  As seen in Part One, the input voltage was adjusted to proportionately affect the output voltage, thus varying the speed of the motor.  As input voltage was swept from high to low in Part One, the motor speed slowed and eventually no noticeable turning could be observed at \SI{3}{V}.  As seen in Part Two, the \%Duty of the \SI{5}{V} to the $Enable$ input was adjusted such that the time that \SI{5}{V} was seen at the $Enable$ input was varied from 50\% of the time to 80\% of the time which resulted in lower to higher Vrms accordingly.  This proportional relationship in \%Duty and output Vrms was observed and recorded in Table~\ref{tab:duty}.
 
 % \section{Equations}
 % \label{sec:equations}
